force-app/main/default/objects/Potential_Prospect__c/Potential_Prospect__c.object-meta.xml
<CustomObject>
    <label>Potential Prospect</label>
    <nameField>
        <label>Last Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Potential Prospects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>