force-app/main/default/objects/Potential_Prospect__c/fields/ExternalID__c.field-meta.xml
<CustomField>
    <fullName>ExternalID__c</fullName>
    <externalId>true</externalId>
    <label>ExternalID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>