force-app/main/default/objects/Potential_Prospect__c/fields/From_Year__c.field-meta.xml
<CustomField>
    <fullName>From_Year__c</fullName>
    <label>From Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>