force-app/main/default/objects/Potential_Prospect__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <label>Team</label>
    <length>80</length>
    <type>Text</type>
</CustomField>